--- a/Cliente/App.config
+++ b/Cliente/App.config
@@ -1,6 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Cliente.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup>
         
-    <supportedRuntime version="v2.0.50727"/></startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup>
+    <userSettings>
+        <Cliente.My.MySettings>
+            <setting name="adminPass" serializeAs="String">
+                <value>102250</value>
+            </setting>
+            <setting name="puerto" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="tiempoMensaje" serializeAs="String">
+                <value>5</value>
+            </setting>
+            <setting name="tiempoPreaviso" serializeAs="String">
+                <value>5</value>
+            </setting>
+            <setting name="nombreCiber" serializeAs="String">
+                <value>Nombre ciber</value>
+            </setting>
+            <setting name="ipServidor" serializeAs="String">
+                <value />
+            </setting>
+        </Cliente.My.MySettings>
+    </userSettings>
 </configuration>
