--- a/Cliente/Cliente.vbproj
+++ b/Cliente/Cliente.vbproj
@@ -13,7 +13,7 @@
     <AssemblyName>Cliente</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>WindowsForms</MyType>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <PublishUrl>publish\</PublishUrl>
@@ -38,7 +38,7 @@
     <DebugType>full</DebugType>
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
-    <OutputPath>..\Servidor\bin\Debug\</OutputPath>
+    <OutputPath>..\Salida\</OutputPath>
     <DocumentationFile>Cliente.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
     <Prefer32Bit>false</Prefer32Bit>
@@ -84,6 +84,9 @@
   <PropertyGroup>
     <ManifestKeyFile>ORDENADOR_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>icon32.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -108,6 +111,12 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ingresarContrasena.Designer.vb">
+      <DependentUpon>ingresarContrasena.vb</DependentUpon>
+    </Compile>
+    <Compile Include="ingresarContrasena.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="PantallaBlo.Designer.vb">
       <DependentUpon>PantallaBlo.vb</DependentUpon>
     </Compile>
@@ -151,6 +160,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="ingresarContrasena.resx">
+      <DependentUpon>ingresarContrasena.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="PantallaBlo.resx">
       <DependentUpon>PantallaBlo.vb</DependentUpon>
     </EmbeddedResource>
@@ -189,6 +201,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="icon32.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
