--- a/Servidor/App.config
+++ b/Servidor/App.config
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Servidor.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="Servidor.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <startup>
         
-    <supportedRuntime version="v2.0.50727"/></startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup>
     <userSettings>
         <Servidor.My.MySettings>
             <setting name="ipPC1" serializeAs="String">
@@ -30,6 +30,18 @@
             </setting>
             <setting name="ipPC7" serializeAs="String">
                 <value />
+            </setting>
+            <setting name="ipPC8" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ipPC9" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ipPC10" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="puerto" serializeAs="String">
+                <value>55555</value>
             </setting>
         </Servidor.My.MySettings>
     </userSettings>
